Update and rename A Melodic Minor.html to index.html

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <div class="top-bar">
       <div class="top-bar-button">C Major</div>
       <div class="top-bar-button">A Harmonic Minor</div>
-      <div class="top-bar-button"><a href="A Melodic Minor.html">A Melodic Minor</a></div>
+      <div class="top-bar-button"><a href="index.html">A Melodic Minor</a></div>
     </div>
 
   </body>
